--- a/index.html
+++ b/index.html
@@ -14,6 +14,11 @@
 <body>
 
     <header>
+        <div class="logo_sony d-flex justify-content-end align-items-center">
+            <div class="col-2 pe-2">
+                <img class="img-fluid" src="./assets/img/sony_logo.svg" alt="logo sony">
+            </div>
+        </div>
         <nav class="navbar navbar-expand-lg navbar-light">
             <div class="container-fluid">
               <a class="navbar-brand" href="#"><img src="./assets/img/play_logo.svg" alt="playstation logo"></a>
@@ -111,6 +116,7 @@
                 <button type="button" class="btn btn_red rounded-pill d-block my-4 fs_8">Acquista ora</button>
             </div>
         </section>
+        <!-- showcase -->
         <section class="_showcase container d-flex flex-wrap mt-3">
             <div class="col-6 px-3 my-2">
                 <img class="img-fluid rounded_4" src="./assets/img/returnal-listing-thumb-01-ps5.jpg" alt="returnal cover">
@@ -141,7 +147,7 @@
             <div>
                 <h2 class="text-capitalize mb-3">console playStation 5</h2>
                 <span class="text-secondary fs_7">Sperimenta la nuove generazione di incredibili giochi Playstation.</span>
-                <button type="button" class="btn btn-primary rounded-pill mt-3 fs_8">Maggiori informazioni</button>
+                <button type="button" class="btn btn-primary rounded-pill mt-3 fs_8 d-block">Maggiori informazioni</button>
             </div>
             <div class="d-flex flex-wrap _ps-img">
                 <img class="img-fluid col-12" src="./assets/img/playstation-5-thumb.png" alt="playstation 5">
