--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
     <header>
         <div class="logo_sony d-flex justify-content-end align-items-center">
-            <div class="col-2 col-md-1 pe-2">
+            <div class="col-2 col-md-1 p-1 me-1">
                 <img class="img-fluid" src="./assets/img/sony_logo.svg" alt="logo sony">
             </div>
         </div>
@@ -108,9 +108,10 @@
     </header>
 
     <main>
+        <!-- hero -->
         <section class="_hero d-flex flex-column justify-content-end">
-            <div class="container text-white col-xxl-4 ms-1">
-                <img class="img-fluid w-50" src="./assets/img/returnal-hero-banner-logo.png" alt="returnal banner">
+            <div class="container text-white">
+                <img class="img-fluid col-7 col-md-6 col-xl-5 col-xxl-4" src="./assets/img/returnal-hero-banner-logo.png" alt="returnal banner">
                 <h2 class="my-3">Rompi il cerchio</h2>
                 <span class="fs_8">Rialzati dopo ogni sconfitta e affronta una nuova sfida con ogni rinascita in questo esplosivo thriller fantascientifico, disponibile in esclusiva su PS5.</span>
                 <button type="button" class="btn btn_red rounded-pill d-block my-4 fs_8 align-self-start">Acquista ora</button>
@@ -137,20 +138,20 @@
                 <img class="img-fluid rounded_4" src="./assets/img/ratchet-and-clank-rift-apart-keyart.jpg" alt="ratchet and clank cover">
             </div>
         </section>
-        <!-- accessori playstation -->
+        <!-- accessori playstation 5-->
         <section class="container">
             <div class="text-center my-5">
                 <span class="text-uppercase text-primary fs_9">play has no limits</span>
                 <h2 class="mb-3">Ecco la Playstation 5</h2>
-                <span class="text-secondary fs_7">Tuffati in nuove possibilit&agrave; di gioco completamente insapettate</span>
+                <span class="text-secondary">Tuffati in nuove possibilit&agrave; di gioco completamente insapettate</span>
             </div>
             <div class="d-flex flex-wrap">
-                <div class="col-md-5 align-self-center">
+                <div class="col-md-4 align-self-center">
                     <h2 class="text-capitalize mb-3">console playStation 5</h2>
-                    <span class="text-secondary fs-6">Sperimenta la nuove generazione di incredibili giochi Playstation.</span>
+                    <span class="text-secondary">Sperimenta la nuove generazione di incredibili giochi Playstation.</span>
                     <button type="button" class="btn btn-primary rounded-pill mt-3 fs_8 d-block">Maggiori informazioni</button>
                 </div>
-                <div class="col-12 col-md-7">
+                <div class="col-12 col-md-8">
                     <img class="img-fluid" src="./assets/img/playstation-5-thumb.png" alt="playstation 5">
                 </div>
             </div>
@@ -185,9 +186,9 @@
         </section>
         <!-- it takes two -->
         <section class="_hero-2 d-flex flex-column justify-content-end">
-            <div class="container text-white col-xxl-3 ms-1">
-                <img class="img-fluid w-50" src="./assets/img/it-takes-two-logo.png" alt="it takes two logo">
-                <h2 class="my-3">Un'avventura cooperativa selvaggia ti attende</h2>
+            <div class="container text-white">
+                <img class="img-fluid col-7 col-sm-6 col-md-5 col-lg-3 col-xxl-2" src="./assets/img/it-takes-two-logo.png" alt="it takes two logo">
+                <h2 class="my-3 col-xxl-4">Un'avventura cooperativa selvaggia ti attende</h2>
                 <span class="fs_8">Trova un amico e partite insieme per l'avventura più folle delle vostre vite in It Takes Two, un giorno d'avventura cooperativa a piattaforme che stravolge il suo genere.</span>
                 <button type="button" class="btn btn_red rounded-pill d-block my-4 fs_8">Acquista ora</button>
             </div>
@@ -195,55 +196,55 @@
         <!-- nuove uscite -->
         <section class="bg_gray">
             <div class="new_releases container d-flex flex-wrap text-white pb-5">
-                <div class="my-3 w-100">
+                <div class="my-3 w-100 px-3">
                     <h2>Nuove uscite</h2>
                     <span>Giochi incredibili per PS4 e PS5 disponibili ora</span>
                 </div>
-                <div class="col-6 col-sm-4 col-xxl-2 px-3 my-2">
+                <div class="col-6 col-sm-4 col-lg-3 col-xxl-2 px-3 my-2">
                     <img class="img-fluid rounded_4" src="./assets/img/tony-hawks-pro-skater-1-2-store-art.jpg" alt="tony hawks game">
                     <span class="fs_8">Tony Hawk's&trade; Pro Skater&trade; 1 + 2</span>
                 </div>
-                <div class="col-6 col-sm-4 col-xxl-2 px-3 my-2">
+                <div class="col-6 col-sm-4 col-lg-3 col-xxl-2 px-3 my-2">
                     <img class="img-fluid rounded_4" src="./assets/img/crash-bandicoot-4-its-about-time-store-art.jpg" alt="crash bandicoot 4 game">
                     <span class="fs_8">Crash Bandicoot 4: It's About Time</span>
                 </div>
-                <div class="col-6 col-sm-4 col-xxl-2 px-3 my-2">
+                <div class="col-6 col-sm-4 col-lg-3 col-xxl-2 px-3 my-2">
                     <img class="img-fluid rounded_4" src="./assets/img/tony-hawks-pro-skater-1-2-store-art.jpg" alt="tony hawks game">
                     <span class="fs_8">Tony Hawk's&trade; Pro Skater&trade; 1 + 2</span>
                 </div>
-                <div class="col-6 col-sm-4 col-xxl-2 px-3 my-2">
+                <div class="col-6 col-sm-4 col-lg-3 col-xxl-2 px-3 my-2">
                     <img class="img-fluid rounded_4" src="./assets/img/crash-bandicoot-4-its-about-time-store-art.jpg" alt="crash bandicoot 4 game">
                     <span class="fs_8">Crash Bandicoot 4: It's About Time</span>
                 </div>
-                <div class="col-6 col-sm-4 col-xxl-2 px-3 my-2">
+                <div class="col-6 col-sm-4 col-lg-3 col-xxl-2 px-3 my-2">
                     <img class="img-fluid rounded_4" src="./assets/img/tony-hawks-pro-skater-1-2-store-art.jpg" alt="tony hawks game">
                     <span class="fs_8">Tony Hawk's&trade; Pro Skater&trade; 1 + 2</span>
                 </div>
-                <div class="col-6 col-sm-4 col-xxl-2 px-3 my-2">
+                <div class="col-6 col-sm-4 col-lg-3 col-xxl-2 px-3 my-2">
                     <img class="img-fluid rounded_4" src="./assets/img/crash-bandicoot-4-its-about-time-store-art.jpg" alt="crash bandicoot 4 game">
                     <span class="fs_8">Crash Bandicoot 4: It's About Time</span>
                 </div>
-                <div class="col-6 col-sm-4 col-xxl-2 px-3 my-2">
+                <div class="col-6 col-sm-4 col-lg-3 col-xxl-2 px-3 my-2">
                     <img class="img-fluid rounded_4" src="./assets/img/tony-hawks-pro-skater-1-2-store-art.jpg" alt="tony hawks game">
                     <span class="fs_8">Tony Hawk's&trade; Pro Skater&trade; 1 + 2</span>
                 </div>
-                <div class="col-6 col-sm-4 col-xxl-2 px-3 my-2">
+                <div class="col-6 col-sm-4 col-lg-3 col-xxl-2 px-3 my-2">
                     <img class="img-fluid rounded_4" src="./assets/img/crash-bandicoot-4-its-about-time-store-art.jpg" alt="crash bandicoot 4 game">
                     <span class="fs_8">Crash Bandicoot 4: It's About Time</span>
                 </div>
-                <div class="col-6 col-sm-4 col-xxl-2 px-3 my-2">
+                <div class="col-6 col-sm-4 col-lg-3 col-xxl-2 px-3 my-2">
                     <img class="img-fluid rounded_4" src="./assets/img/tony-hawks-pro-skater-1-2-store-art.jpg" alt="tony hawks game">
                     <span class="fs_8">Tony Hawk's&trade; Pro Skater&trade; 1 + 2</span>
                 </div>
-                <div class="col-6 col-sm-4 col-xxl-2 px-3 my-2">
+                <div class="col-6 col-sm-4 col-lg-3 col-xxl-2 px-3 my-2">
                     <img class="img-fluid rounded_4" src="./assets/img/crash-bandicoot-4-its-about-time-store-art.jpg" alt="crash bandicoot 4 game">
                     <span class="fs_8">Crash Bandicoot 4: It's About Time</span>
                 </div>
-                <div class="col-6 col-sm-4 col-xxl-2 px-3 my-2">
+                <div class="col-6 col-sm-4 col-lg-3 col-xxl-2 px-3 my-2">
                     <img class="img-fluid rounded_4" src="./assets/img/tony-hawks-pro-skater-1-2-store-art.jpg" alt="tony hawks game">
                     <span class="fs_8">Tony Hawk's&trade; Pro Skater&trade; 1 + 2</span>
                 </div>
-                <div class="col-6 col-sm-4 col-xxl-2 px-3 my-2">
+                <div class="col-6 col-sm-4 col-lg-3 col-xxl-2 px-3 my-2">
                     <img class="img-fluid rounded_4" src="./assets/img/crash-bandicoot-4-its-about-time-store-art.jpg" alt="crash bandicoot 4 game">
                     <span class="fs_8">Crash Bandicoot 4: It's About Time</span>
                 </div>
@@ -255,20 +256,20 @@
                 <h2 class="mb-3">Esplora PlayStation&reg; 4</h2>
                 <span class="text-secondary">Giochi incredibili e intrattenimento senza fine. Non c'è mai stato un momento migliore per giocare sulla tua PS4.</span>
             </div>
-            <div class="d-flex flex-wrap">
+            <div class="d-flex flex-wrap _ps4">
                 <div class="col-12 col-md-4 px-1">
                     <img class="img-fluid" src="./assets/img/ps4-slim-homepage-image-block.jpg" alt="playstation 4 slim">
                     <h2>PlayStation 4</h2>
                     <span class="text-secondary">Giochi incredibili live su PS4, con 1 TB di spazio di archiviazione.</span>
                     <button type="button" class="btn btn-primary rounded-pill mt-3 fs_7 d-block">Scopri di pi&ugrave;</button>
                 </div>
-                <div class="mb-5 col-12 col-md-4 px-1">
+                <div class="my-5 col-12 col-md-4 px-1">
                     <img class="img-fluid" src="./assets/img/double11-202010-tw-psvr.jpg" alt="playstation vr">
                     <h2>PlayStation VR</h2>
                     <span class="text-secondary">Oltre 500 titoli ed esperienze di gioco. Scoprili tutti.</span>
                     <button type="button" class="btn btn-primary rounded-pill mt-3 fs_7 d-block">Scopri di pi&ugrave;</button>
                 </div>
-                <div class="mb-5 col-12 col-md-4 px-1">
+                <div class="my-5 col-12 col-md-4 px-1">
                     <img class="img-fluid" src="./assets/img/dualshock-4-listing-thumb.jpg" alt="dualshock 4">
                     <h2>Accessori</h2>
                     <span class="text-secondary">Migliora la tua esperienza PS4 con una gamma di accessori ufficiali.</span>
@@ -278,14 +279,14 @@
         </section>
         <!-- playstation plus -->
         <section class="bg_lightgray">
-            <div class="container d-flex flex-wrap">
-                <div class="col-12 col-xxl-6 d-flex flex-column justify-content-center">
-                    <img class="img-fluid col-8 col-xxl-4 d-block mb-3" src="./assets/img/ps-plus-logo.png" alt="ps plus logo">
-                    <span class="fs_7">Migliora la tua esperienza PlayStation con l'accesso a multigiocatore online, giochi mensili, sconti esclusivi e altro ancora.</span>
-                    <button type="button" class="btn btn_lightgray rounded-pill fs_7 d-block mt-3 align-self-start">Esplora PlayStation Plus</button>
+            <div class="container d-flex flex-wrap _ps-plus">
+                <div class="col-12 col-md-6 col-xxl-6 d-flex flex-column justify-content-center">
+                    <img class="img-fluid col-7 col-xxl-6 d-block mb-3" src="./assets/img/ps-plus-logo.png" alt="ps plus logo">
+                    <span>Migliora la tua esperienza PlayStation con l'accesso a multigiocatore online, giochi mensili, sconti esclusivi e altro ancora.</span>
+                    <button type="button" class="btn btn_lightgray rounded-pill d-block mt-3 align-self-start">Esplora PlayStation Plus</button>
                 </div>
-                <div class="col-xxl-6 _ps-plus">
-                    <img class="img-fluid" src="./assets/img/ps-plus-april-monthly-games-featured-image-block.png" alt="ps plus games">
+                <div class="col-md-6 col-xxl-6">
+                    <img class="img-fluid _ps-plus-img" src="./assets/img/ps-plus-april-monthly-games-featured-image-block.png" alt="ps plus games">
                 </div>
             </div>
         </section>
@@ -309,14 +310,14 @@
         </section>
         <!-- playstation now -->
         <section class="bg_blue">
-            <div class="container py-5 d-flex flex-wrap">
-                <div class="col-12 col-xxl-6 d-flex flex-column justify-content-center">
-                    <img class="img-fluid col-8 col-xxl-4 d-block mb-3" src="./assets/img/ps-now-logo-two-column.png" alt="playstation now logo">
-                    <span class="fs_7 text-white">Ottieni l'accesso immediato a una vastissima raccolta di oltre 800 giochi per PS4, PS3 e PS2 su PS4 o PC Windows, con nuovi titoli aggiunti ogni mese.</span>
-                    <button type="button" class="btn btn-light rounded-pill fs_7 d-block mt-3 align-self-start">Esplora PlayStation Now</button>
+            <div class="container d-flex flex-wrap _ps-now">
+                <div class="col-12 col-md-6 col-xl-6 d-flex flex-column justify-content-center">
+                    <img class="img-fluid col-7 col-xl-6 d-block mb-3" src="./assets/img/ps-now-logo-two-column.png" alt="playstation now logo">
+                    <span class="text-white">Ottieni l'accesso immediato a una vastissima raccolta di oltre 800 giochi per PS4, PS3 e PS2 su PS4 o PC Windows, con nuovi titoli aggiunti ogni mese.</span>
+                    <button type="button" class="btn btn-light rounded-pill d-block mt-3 align-self-start">Esplora PlayStation Now</button>
                 </div>
-                <div class="col-xxl-6 _ps-now">
-                    <img class="img-fluid" src="./assets/img/ps-now-april-featured-image-block.png" alt="ps now games">
+                <div class="col-md-6 col-xxl-6">
+                    <img class="img-fluid _ps-now-img" src="./assets/img/ps-now-april-featured-image-block.png" alt="ps now games">
                 </div>
             </div>
         </section>
@@ -350,15 +351,15 @@
                 <img class="img-fluid w_3" src="./assets/img/language-globe.svg" alt="globe">
                 <span class="fs_7 ms-2">Country / Region: Italy</span>
             </div>
-            <div class="mt-4">
-                <ul class="ps-3">
+            <div class="mt-4 d-flex flex-wrap">
+                <ul class="ps-3 col-12 col-md-4 col-lg-4 col-xxl-4">
                     <li><a class="text-white fs_7" href="#">Link footer n</a></li>
                     <li><a class="text-white fs_7" href="#">Link footer n</a></li>
                     <li><a class="text-white fs_7" href="#">Link footer n</a></li>
                     <li><a class="text-white fs_7" href="#">Link footer n</a></li>
                     <li><a class="text-white fs_7" href="#">Link footer n</a></li>
                 </ul>
-                <ul class="ps-3">
+                <ul class="ps-3 col-12 col-md-4 col-lg-4 col-xxl-4">
                     <li><a class="text-white fs_7" href="#">Link footer n</a></li>
                     <li><a class="text-white fs_7" href="#">Link footer n</a></li>
                     <li><a class="text-white fs_7" href="#">Link footer n</a></li>
@@ -367,14 +368,14 @@
                     <li><a class="text-white fs_7" href="#">Link footer n</a></li>
                     <li><a class="text-white fs_7" href="#">Link footer n</a></li>
                 </ul>
-                <ul class="ps-3">
+                <ul class="ps-3 col-12 col-md-4 col-lg-4 col-xxl-4">
                     <li><a class="text-white fs_7" href="#">Link footer n</a></li>
                     <li><a class="text-white fs_7" href="#">Link footer n</a></li>
                     <li><a class="text-white fs_7" href="#">Link footer n</a></li>
                 </ul>
             </div>
             <div class="mt-5">
-                <img class="img-fluid w-25 d-block" src="./assets/img/sie-logo.svg" alt="sony interactive entartainment">
+                <img class="img-fluid col-4 col-sm-3 col-lg-2 col-xxl-1 d-block" src="./assets/img/sie-logo.svg" alt="sony interactive entartainment">
                 <span class="_copyright fs_9">Website &copy;2021 Sony Interactive Entertainment Europe Limited. Tutti i contenuti, nomi dei giochi, nomi commerciali e/o abbigliamento, marchi registrati, grafica e immagini associati sono marchi registrati e/o materiale protetto da copyright dai rispettivi proprietari. Tutti i diritti riservati. <a href="#">Maggiori info</a></span>
             </div>
         </div>
