fix social media

--- a/index.html
+++ b/index.html
@@ -326,17 +326,17 @@
             <div class="text-center mb-5">
                 <h2>Seguici sui social media</h2>
             </div>
-            <div class="d-flex flex-wrap">
-                <div class="col-6 col-sm-3">
+            <div class="d-flex flex-wrap justify-content-center">
+                <div class="col-6 col-sm-3 col-lg-2">
                     <a href="#"><img class="img-fluid px-2 my-3" src="./assets/img/twitter.jpg" alt="twitter logo"></a>
                 </div>
-                <div class="col-6 col-sm-3">
+                <div class="col-6 col-sm-3 col-lg-2">
                     <a href="#"><img class="img-fluid px-2 my-3" src="./assets/img/facebook.jpg" alt="facebook logo"></a>
                 </div>
-                <div class="col-6 col-sm-3">
+                <div class="col-6 col-sm-3 col-lg-2">
                     <a href="#"><img class="img-fluid px-2 my-3" src="./assets/img/instagram.jpg" alt="instagram logo"></a>
                 </div>
-                <div class="col-6 col-sm-3">
+                <div class="col-6 col-sm-3 col-lg-2">
                     <a href="#"><img class="img-fluid px-2 my-3" src="./assets/img/youtube.png" alt="youtube logo"></a>    
                 </div>
             </div>
