--- a/index.html
+++ b/index.html
@@ -343,15 +343,17 @@
         </section>
     </main>
     <footer class="bg_lightblue">
-        <div class="container text-white py-5">
-            <div class="mb-4">
-                <img class="img-fluid" src="./assets/img/ps-footer.svg" alt="playstation logo">
+        <div class="container d-flex flex-wrap text-white py-5">
+            <div class="col-12 col-lg-6">
+                <div class="mb-4">
+                    <img class="img-fluid" src="./assets/img/ps-footer.svg" alt="playstation logo">
+                </div>
+                <div class="d-flex">
+                    <img class="img-fluid w_3" src="./assets/img/language-globe.svg" alt="globe">
+                    <span class="fs_7 ms-2">Country / Region: Italy</span>
+                </div>
             </div>
-            <div class="d-flex">
-                <img class="img-fluid w_3" src="./assets/img/language-globe.svg" alt="globe">
-                <span class="fs_7 ms-2">Country / Region: Italy</span>
-            </div>
-            <div class="mt-4 d-flex flex-wrap">
+            <div class="mt-4 d-flex flex-wrap col-12 col-lg-6">
                 <ul class="ps-3 col-12 col-md-4 col-lg-4 col-xxl-4">
                     <li><a class="text-white fs_7" href="#">Link footer n</a></li>
                     <li><a class="text-white fs_7" href="#">Link footer n</a></li>
@@ -374,7 +376,7 @@
                     <li><a class="text-white fs_7" href="#">Link footer n</a></li>
                 </ul>
             </div>
-            <div class="mt-5">
+            <div class="mt-5 col-12">
                 <img class="img-fluid col-4 col-sm-3 col-lg-2 col-xxl-1 d-block" src="./assets/img/sie-logo.svg" alt="sony interactive entartainment">
                 <span class="_copyright fs_9">Website &copy;2021 Sony Interactive Entertainment Europe Limited. Tutti i contenuti, nomi dei giochi, nomi commerciali e/o abbigliamento, marchi registrati, grafica e immagini associati sono marchi registrati e/o materiale protetto da copyright dai rispettivi proprietari. Tutti i diritti riservati. <a href="#">Maggiori info</a></span>
             </div>
